# alacritty

./: .agignore  .clinerules  .continuerules  .drone.yml  .ecformat_ignore  .editorconfig  .gitattributes  .gitignore  .rules  .travis.yml  AGENTS.md  AI.md  Alacritty.desktop  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  INSTALL.md  INSTALL_zh-CN.md  ISSUE_UNWRAP_FIXES.md  Justfile  LICENSE-APACHE  Makefile  ORIGINAL_README.md  OS-PKGS-INSTALL.md  README.md  README_zh-CN.md  TASKS.md  TESTING_RESULTS.md  TODO  after  agent-instructions.md  ala_desktop_install.sh  alacritty-completions.bash  alacritty-completions.fish  alacritty-completions.zsh  alacritty.info  alacritty.man  (+18 more)
alacritree/: Cargo.toml  build.rs
alacritree/assets/: alacritree.desktop
alacritree/src/: app.rs  bindings.rs  builtin_font.rs  clipboard.rs  colors.rs  config.rs  fonts.rs  git_status.rs  input.rs  links.rs  main.rs  projects.rs  session.rs  state.rs  terminal_view.rs  worktree.rs
alacritree/windows/: alacritree.rc
alacritty/: Cargo.toml  README_zh-CN.md  build.rs  extra  windows
alacritty/alacritty.xcodeproj/: project.pbxproj
alacritty/extra/completions/: _alacritty  alacritty.fish
alacritty/extra/linux/: org.alacritty.Alacritty.appdata.xml
alacritty/extra/windows/wix/: alacritty.wxs
alacritty/res/: background.f.glsl  background.v.glsl  glyphrect.f.glsl  glyphrect.v.glsl  graphics.f.glsl  graphics.v.glsl  rect.f.glsl  rect.v.glsl  rect.v.glsl120  screen.f.glsl  screen.v.glsl  text.f.glsl  text.v.glsl  text.v.glsl120
alacritty/res/gles2/: text.f.glsl  text.v.glsl
alacritty/res/glsl3/: text.f.glsl  text.v.glsl
alacritty/src/: child_pty.rs  claude_sessions.rs  cli.rs  clipboard.rs  config.rs  cursor.rs  daemon.rs  display.rs  event.rs  event_tests.rs  input.rs  ipc.rs  locale.rs  logging.rs  macros.rs  main.rs  menu.rs  message_bar.rs  migrate.rs  panic.rs  passwd.rs  scheduler.rs  session.rs  string.rs  tab_manager.rs  text_objects.rs  text_run.rs  tpanic.rs  url.rs  wayland_theme.rs  window.rs  window_context.rs
alacritty/src/ai/: agent.rs  approval.rs  client.rs  mod.rs  panel.rs  secret.rs
alacritty/src/child_pty/: mod.rs
alacritty/src/config/: ai.rs  bell.rs  bindings.rs  color.rs  colorscheme.rs  cursor.rs  debug.rs  dynamic_font_size.rs  font.rs  general.rs  instance.rs  merge.rs  mod.rs  monitor.rs  mouse.rs  scrolling.rs  selection.rs  serde_utils.rs  tabs.rs  terminal.rs  test.rs  text_objects.rs  ui_config.rs  window.rs
alacritty/src/display/: bell.rs  chrome.rs  color.rs  colorscheme.rs  content.rs  cursor.rs  damage.rs  hint.rs  ime_integration_test.rs  meter.rs  mod.rs  scrollbar.rs  test_ime.rs  wayland_theme.rs  window.rs
alacritty/src/input/: keyboard.rs  mod.rs
alacritty/src/macos/: dock.rs  locale.rs  mod.rs  proc.rs
alacritty/src/migrate/: mod.rs  yaml.rs
alacritty/src/polling/: ipc.rs  mod.rs  signal.rs
alacritty/src/renderer/: atlas.rs  background.rs  box_drawing.rs  builtin_font.rs  filewatch.rs  glyph.rs  grid.rs  math.rs  mod.rs  platform.rs  quad.rs  rect.rs  rectrenderer.rs  rects.rs  shade.rs  shader.rs  solidrect.rs  text_run.rs  texture.rs
alacritty/src/visor/: mod.rs
alacritty/windows/: alacritty.manifest
alacritty/windows/wix/: alacritty.wxs
alacritty_charts/: Cargo.toml  README.md  charts.yml  rustfmt.toml
alacritty_charts/src/: README.md  async_utils.rs  config.rs  lib.rs  prometheus.rs
alacritty_config/: Cargo.toml
alacritty_config/src/: lib.rs
alacritty_config_derive/: Cargo.toml
alacritty_config_derive/examples/: config.rs
alacritty_config_derive/src/: de_enum.rs  de_struct.rs  lib.rs  serde_replace.rs
alacritty_config_derive/src/config_deserialize/: de_enum.rs  de_struct.rs  mod.rs
alacritty_config_derive/tests/: config.rs
alacritty_terminal/: CHANGELOG.md  Cargo.toml  build.rs
alacritty_terminal/src/: ansi.rs  cli.rs  clipboard.rs  cursor.rs  display.rs  event.rs  event_loop.rs  event_loop_tests.rs  index.rs  input.rs  keyboard_motion.rs  lib.rs  locale.rs  macros.rs  message_bar.rs  meter.rs  panic.rs  selection.rs  sync.rs  text_run.rs  thread.rs  url.rs  util.rs  vi_mode.rs  window.rs
alacritty_terminal/src/config/: bell.rs  bindings.rs  colors.rs  debug.rs  font.rs  mod.rs  monitor.rs  mouse.rs  options.rs  scrolling.rs  test.rs  visual_bell.rs  window.rs
alacritty_terminal/src/graphics/: mod.rs  sixel.rs
alacritty_terminal/src/grid/: integration_tests.rs  mod.rs  resize.rs  row.rs  storage.rs  storage_tests.rs  tests.rs
alacritty_terminal/src/renderer/: mod.rs  rects.rs
alacritty_terminal/src/term/: cell.rs  color.rs  hyperlink.rs  mod.rs  render.rs  search.rs  text_run.rs
alacritty_terminal/src/tty/: mod.rs  unix.rs
alacritty_terminal/tests/: ref.rs
alacritty_terminal/tests/ref/: .editorconfig
alacritty_terminal/tests/sixel/: README.md  testimage_im6.rgba  testimage_im6.sixel  testimage_libsixel.rgba  testimage_libsixel.sixel  testimage_ppmtosixel.rgba  testimage_ppmtosixel.sixel
copypasta/: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE.mit  README.md
copypasta/examples/: hello_world.rs  primary_selection.rs  wayland.rs
copypasta/src/: common.rs  lib.rs  linux.rs  macos.rs  nop_clipboard.rs  osx_clipboard.rs  wayland_clipboard.rs  windows.rs  windows_clipboard.rs  x11.rs  x11_clipboard.rs
font/: Cargo.toml
font/src/: darwin.rs  directwrite.rs  ft.rs  lib.rs
font/src/darwin/: byte_order.rs  cg_color.rs  cg_ext.rs  mod.rs
font/src/directwrite/: mod.rs
font/src/fontkit/: mod.rs
font/src/ft/: fc.rs  list_fonts.rs  mod.rs
font/src/rusttype/: mod.rs
glutin/: .travis.yml  CHANGELOG.md  Cargo.toml  README-SHARING.md  README.md  appveyor.yml  build.rs
glutin/.circleci/: config.yml
glutin/examples/: fullscreen.rs  multiwindow.rs  sharing.rs  transparent.rs  window.rs
glutin/examples/support/: mod.rs
glutin/src/: lib.rs
glutin/src/api/: dlopen.rs  mod.rs
glutin/src/os/: android.rs  ios.rs  macos.rs  mod.rs  unix.rs  windows.rs
glutin/src/platform/: mod.rs
winpty/: Cargo.toml  build.rs
winpty/src/: lib.rs  windows.rs
(+453 files in other folders)
