[package]
name = "alacritty"
version = "0.16.0-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "A fast, cross-platform, OpenGL terminal emulator"
readme = "README.md"
homepage = "https://alacritty.org"
repository = "https://github.com/alacritty/alacritty"
edition = "2021"
rust-version = "1.74.0"

[dependencies]
alacritty_terminal= { workspace = true }
alacritty_config_derive= { workspace = true }
alacritty_config= { workspace = true }
ahash = { workspace = true, features = ["no-rng"] }
bitflags = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
copypasta = { workspace = true }
crossfont = { workspace = true }
glutin = { workspace = true, features = ["egl", "wgl"] }
home = { workspace = true }
libc = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
notify = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
unicode-width = { workspace = true }
winit = { workspace = true, features = ["rwh_06", "serde"] }

[build-dependencies]
gl_generator = { workspace = true }

[dev-dependencies]
clap_complete = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
xdg = "2.5.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
png = { version = "0.17.5", default-features = false, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", default-features = false, features = [
    "std",
    "NSString",
    "NSLocale",
] }
objc2-app-kit = { version = "0.2.2", default-features = false, features = [
    "std",
    "NSColorSpace",
    "NSResponder",
    "NSView",
    "NSWindow",
] }

[target.'cfg(windows)'.dependencies]
dirs = "5.0.1"
windows-sys = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Foundation",
]}

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.2.0"

[features]
default = ["wayland", "x11"]
x11 = [
    "copypasta/x11",
    "winit/x11",
    "glutin/x11",
    "glutin/glx",
    "png",
]
wayland = [
    "copypasta/wayland",
    "glutin/wayland",
    "winit/wayland",
    "winit/wayland-dlopen",
    "winit/wayland-csd-adwaita-crossfont",
]
nightly = []
