[package]
name = "alacritty_charts"
version = "0.1.0"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2018"

[dependencies]
tokio-core = "0.1.17"
tokio = "0.1"
num-traits = "0.2"
hyper = "0.12"
futures = "0.1.26"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1"
serde_yaml = "0.8"
log = "0.4"
env_logger = "0.6.0"
percent-encoding = "1.0.1"
hyper-tls = "0.3.2"
