[package]
name = "alacritty_config"
version = "0.2.3-dev"
authors = ["Christian Duerr <contact@christianduerr.com>"]
license = "MIT OR Apache-2.0"
description = "Alacritty configuration abstractions"
homepage = "https://alacritty.org"
repository = "https://github.com/alacritty/alacritty"
edition = "2021"
rust-version = "1.74.0"

[dependencies]
log = { workspace = true, features = ["serde"] }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
alacritty_config_derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }
