[package]
name = "copypasta"
version = "0.0.1"
authors = ["Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "Forthcoming clipboard library"
keywords = ["clipboard", "copy", "paste"]

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"

[target.'cfg(windows)'.dependencies]
clipboard = "0.4.2"