[package]
name = "copypasta"
version = "0.6.0"
authors = ["Christian Duerr <contact@christianduerr.com>"]
description = "copypasta is a cross-platform library for getting and setting the contents of the OS-level clipboard."
repository = "https://github.com/jwilm/alacritty"
license = "MIT / Apache-2.0"
keywords = ["clipboard"]

[target.'cfg(windows)'.dependencies]
clipboard-win = "2.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten"))))'.dependencies]
x11-clipboard = "0.3"
smithay-clipboard = "0.2"
wayland-client = { version = "0.22", features = ["dlopen"] }

[dev-dependencies]
andrew = "0.2.1"
smithay-client-toolkit = "0.5"
