[package]
name = "font"
version = "0.1.0"
authors = ["Joe Wilm <joe@jwilm.com>"]
description = "Font rendering using the best available solution per platform"
license = "Apache-2.0"

[features]
fontkit = ["font-kit"]

[dependencies]
euclid = "0.19.2"
libc = "0.2"
foreign-types = "0.3"
log = "0.4"
font-kit = { version = "*", optional = true }
derive_more = "*"

[target.'cfg(not(any(target_os = "macos", windows)))'.dependencies]
servo-fontconfig = "0.4.0"
freetype-rs = "0.19"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6"
core-text = "13"
core-graphics = "0.17"
core-foundation-sys = "0.6"

[target.'cfg(windows)'.dependencies]
font-loader = "0.6.0"
rusttype = "0.4.1"
