[package]
name = "font"
version = "0.1.0"
authors = ["Joe Wilm <joe@jwilm.com>"]
description = "Font rendering using the best available solution per platform"
license = "Apache-2.0"

[dependencies]
euclid = "0.20"
libc = "0.2"
foreign-types = "0.4"
log = "0.4"


[target.'cfg(not(any(target_os = "macos", windows)))'.dependencies]
servo-fontconfig = "0.4.0"
freetype-rs = "0.19"
harfbuzz_rs = "1.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6"
core-text = "13"
core-graphics = "0.17"
core-foundation-sys = "0.6"

[target.'cfg(windows)'.dependencies]
dwrote = { version = "0.9.0" }

[features]
default = []
