[package]
name = "glutin"
version = "0.18.0"
authors = ["The glutin contributors, Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Cross-platform OpenGL context provider."
keywords = ["windowing", "opengl"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tomaka/glutin"
documentation = "https://docs.rs/glutin"
build = "build.rs"

[package.metadata.docs.rs]
features = ["icon_loading"]

[features]
icon_loading = ["winit/icon_loading"]

[dependencies]
lazy_static = "1"
libc = "0.2"
shared_library = "0.1.0"
winit = { git = "https://github.com/vberger/winit" }

[build-dependencies]
gl_generator = "0.9"

[target.'cfg(target_os = "android")'.dependencies.android_glue]
version = "0.2.3"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cgl = "0.2"
cocoa = "0.17"
core-foundation = "0.6"
core-graphics = "0.16"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.2"
features = [
    "winnt",
    "winuser",
    "wingdi",
    "libloaderapi",
]

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os="dragonfly", target_os="openbsd"))'.dependencies]
osmesa-sys = "0.1.0"
wayland-client = { version = "0.20.4", features = ["egl", "dlopen"] }
x11-dl = "2.17.5"
