[package]
name = "winpty"
version = "0.1.0"
authors = ["Zac Pullar-Strecker <zacmps@gmail.com>"]
license = "MIT"
description = "Safe rust bindings for winpty"

[target.'cfg(windows)'.dependencies]
winpty-sys = "0.4.3"
bitflags = "1.0"
widestring = "0.4.0"

[target.'cfg(windows)'.dev-dependencies]
named_pipe = "0.4"
winapi = { version = "0.3", features = ["winnt", "processthreadsapi"] }
