[package]
name = "winpty"
version = "0.1.0"
authors = ["Zac Pullar-Strecker <zacmps@gmail.com>"]
license = "MIT"
description = "Safe rust bindings for winpty"
edition = "2018"

[target.'cfg(windows)'.dependencies]
winpty-sys = "0.4.3"
bitflags = "1.0"
widestring = "0.4.0"

[target.'cfg(windows)'.dev-dependencies]
named_pipe = "0.4.1"
winapi = { version = "0.3", features = ["winnt", "processthreadsapi"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.1.4"
tempfile = "3.0.4"
http_req = "0.5"
zip = "0.5"
